# lv_port_pc_vscode

./: .gitmodules  CLAUDE.md  CMakeLists.txt  Porting_From_Beken.md  README.md  RK3566_LVGL_DRM_RGA_Summary.md  aarch64-rockchip-linux-gnu.cmake  auto_build.sh  lv_conf.h  music_play_func.md  notice.md  player_design.md  player_design_zh.md  构建说明.md  触摸功能配置说明.md  说明RGA使用文档.md
experience/: basic_example.c  double_buffer_solution.md  rga_accelerate.md  rga_debug.c  rga_lvgl.md
music/: README.md
src/: main.c
src/beken_generated/: Home_init.c  Make_init.c  Setting_coffe_init.c  Setting_mat_init.c  Setting_sys_init.c  Setting_temp_init.c  basic_callback.c  beken_generated.cmake  beken_ui.c  beken_ui.h  event_runtime.c  event_runtime.h
src/beken_generated/custom/: custom_func.c  custom_func.h
src/beken_generated/fonts/: lv_font_ali_15.c  lv_font_ali_16.c  lv_font_ali_17.c  lv_font_ali_18.c  lv_font_ali_36.c  lv_font_montserrat_regular_16.c  lv_font_montserrat_regular_20.c
src/beken_generated/image/: cappuccino_ARGB8888.c  coffee_setting_24x24_RGB565A8_NONE.c  down_white_20x20_RGB565A8_NONE.c  espresso_ARGB8888.c  latte_ARGB8888.c  macchiato_ARGB8888.c  maintenance_setting_20x20_RGB565A8_NONE.c  p_0_269x286_RGB565A8_NONE.c  p_100_269x286_RGB565A8_NONE.c  p_17_269x286_RGB565A8_NONE.c  p_33_269x286_RGB565A8_NONE.c  p_50_269x286_RGB565A8_NONE.c  p_67_269x286_RGB565A8_NONE.c  p_83_269x286_RGB565A8_NONE.c  setting_32x32_RGB565A8_NONE.c  temperature_setting_24x24_RGB565A8_NONE.c
src/custom/: ui_Oven.c
src/hal/: hal.c  rk_drm.c  rk_drm.h
src/player_ui/: player_audio.c  player_audio.h  player_ui.c  player_ui.cmake  player_ui.h
src/watch_ui/: watch_ui.c  watch_ui.cmake  watch_ui.h
